# split

./: CMakeLists.txt  README.md
include/io/: spi_ex.h  uart_ex.h
src/: split.c
src/io/: spi_ex.c  uart_ex.c
